kubernetes/ingress.yml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: example
    namespace: app
  spec:
    ingressClassName: nginx
    rules:
      - http:
          paths:
            - pathType: Prefix
              backend:
                service:
                  name: ui
                  port:
                    number: 8000
              path: /
